--- a/config/locales/translations/embeddable_framework.yml
+++ b/config/locales/translations/embeddable_framework.yml
@@ -151,6 +151,21 @@ parts:
       key: "embeddable_framework.chat.reconnecting.label"
       title: "The title that displays in the chat reconnecting message bubble"
       value: "Reconnecting"
+  - translation:
+      key: "embeddable_framework.chat.emailtranscript.failure_message"
+      title: "The message that appears when an email was not successfully registered for sending a chat transcript."
+      screenshot: "https://zendesk.box.com/s/ciyp3cht8bg1ecbls423isur6era66ph"
+      value: "Unable to send transcript."
+  - translation:
+      key: "embeddable_framework.chat.emailtranscript.try_again"
+      title: "The try again link that appears when an email was not successfully registered for sending a chat transcript. "
+      screenshot: "https://zendesk.box.com/s/283wa03wokpn8t7yq4kx4huy86zqqizq"
+      value: "Try again."
+  - translation:
+      key: "embeddable_framework.chat.emailtranscript.success_message"
+      title: "The message that appears when an email was successfully registered for sending a chat transcript."
+      screenshot: "https://zendesk.box.com/s/2mht92k8pdnjaiixbehabhrx6nmtr4eb"
+      value: "Email will be sent to <b>%(email)s</b> when the chat ends"
 
   # Chat Web SDK
   - translation:
