--- a/config/locales/translations/embeddable_framework.yml
+++ b/config/locales/translations/embeddable_framework.yml
@@ -163,9 +163,14 @@ parts:
       value: "Try again."
   - translation:
       key: "embeddable_framework.chat.emailtranscript.success_message"
-      title: "The message that appears when an email was successfully registered for sending a chat transcript."
+      title: "The message that appears when an email was successfully registered for sending a chat transcript. We have a <b></b> surrounded around email and %(email)s will be replaced by a real email."
       screenshot: "https://zendesk.box.com/s/2mht92k8pdnjaiixbehabhrx6nmtr4eb"
-      value: "Email will be sent to <b>%(email)s</b> when the chat ends"
+      value: "Email will be sent to %(email)s when the chat ends"
+  - translation:
+      key: "embeddable_framework.chat.emailtranscript.title"
+      title: "The form title of the chat email transcript popup"
+      screenshot: "need_url"
+      value: "Email chat transcript"
 
   # Chat Web SDK
   - translation:
