--- a/config/locales/translations/embeddable_framework.yml
+++ b/config/locales/translations/embeddable_framework.yml
@@ -143,6 +143,11 @@ parts:
       screenshot: "https://zendesk.box.com/s/0mq2yi7sukwjn4jhbi3rkt6m82komx6h"
       value: "Welcome"
   - translation:
+      key: "embeddable_framework.chat.header.default.title"
+      title: "Chat's default header text"
+      screenshot: "https://drive.google.com/file/d/1UuLAoz-CR-jdip0MU3BeEc5ATk_6TFjS"
+      value: "Live Support"
+  - translation:
       key: "embeddable_framework.chat.header.subText"
       title: "The Chat's header text that displays a subText that sits below the title. Please match meshim.widget.controllers.defaultdatanode.defaultdatanode.livechat.settings.concierge.titlestring"
       screenshot: "https://zendesk.box.com/s/0mq2yi7sukwjn4jhbi3rkt6m82komx6h"
