--- a/config/locales/translations/embeddable_framework.yml
+++ b/config/locales/translations/embeddable_framework.yml
@@ -253,6 +253,76 @@ parts:
       title: "A description that is displayed on the offline form when there are no Chat agents online to attend to the user"
       screenshot: "https://zendesk.box.com/s/qawwqamv9lhpzjjg8mfrfwz4vmp0twbp"
       value: "Sorry, we aren't online at the moment. Leave a message and we'll get back to you."
+
+
+  - translation:
+      key: "embeddable_framework.chat.preChat.offline.label.operatingHours"
+      title: "The label for 'Operating Hours' for a given customer"
+      screenshot: "https://drive.google.com/open?id=1VeJPuTOOdlXZG60l5yJZuh3Ag3UJE1yg"
+      value: "Operating Hours %(timezone)s"
+  - translation:
+      key: "embeddable_framework.chat.preChat.offline.label.monday"
+      title: "Day of the week for operating hours: Monday"
+      screenshot: "https://drive.google.com/open?id=1uKHW4AxDi6cemxhEspEclAnBCI4wxzkb"
+      value: "Monday"
+  - translation:
+      key: "embeddable_framework.chat.preChat.offline.label.tuesday"
+      title: "Day of the week for operating hours: Tuesday"
+      screenshot: "https://drive.google.com/open?id=19IPSIKviGq9at-jNr-LBEOdulb5RIw_k"
+      value: "Tuesday"
+  - translation:
+      key: "embeddable_framework.chat.preChat.offline.label.wednesday"
+      title: "Day of the week for operating hours: Wednesday"
+      screenshot: "https://drive.google.com/open?id=1CiMsr8Yf_UG2B-UjGXDEpxcGU_m58Ckh"
+      value: "Wednesday"
+  - translation:
+      key: "embeddable_framework.chat.preChat.offline.label.thursday"
+      title: "Day of the week for operating hours: Thursday"
+      screenshot: "https://drive.google.com/open?id=1jNGF6q-AU0y4difm2K6PyPPEmjUDboet"
+      value: "Thursday"
+  - translation:
+      key: "embeddable_framework.chat.preChat.offline.label.friday"
+      title: "Day of the week for operating hours: Friday"
+      screenshot: "https://drive.google.com/open?id=1l9UxZxv7vzRdJhZ9hgjF-Fd4d0vTfzGL"
+      value: "Friday"
+  - translation:
+      key: "embeddable_framework.chat.preChat.offline.label.saturday"
+      title: "Day of the week for operating hours: Saturday"
+      screenshot: "https://drive.google.com/open?id=1NdZEqVBWf8NvdNphUHPoNE9Jw42MFHbE"
+      value: "Saturday"
+  - translation:
+      key: "embeddable_framework.chat.preChat.offline.label.sunday"
+      title: "Day of the week for operating hours: Sunday"
+      screenshot: "https://drive.google.com/open?id=1vz69EFENQmgXzbeZecnWwz9KRoxNNY3-"
+      value: "Sunday"
+  - translation:
+      key: "embeddable_framework.chat.preChat.offline.label.<ampmstuff>"
+      title: ""
+      screenshot: ""
+      value: "<am pm stuff>"
+  - translation:
+      key: "embeddable_framework.chat.preChat.offline.label.noForm"
+      title: "The label to display if all agents are online and the customer doesn't have a contact form"
+      screenshot: "https://drive.google.com/open?id=1cWlcbhwpVpNwVdLKNWm6d2fE80RW4jq7"
+      value: "Sorry, we aren't online at the moment"
+  - translation:
+      key: "embeddable_framework.chat.preChat.offline.button.close"
+      title: "Button label prompting the user to close the chat offline screen"
+      screenshot: "https://drive.google.com/open?id=15AKmHYs2dIOdfw3qjrWwmmG8mK81vhxd"
+      value: "Close"
+  - translation:
+      key: "embeddable_framework.chat.preChat.offline.label.confirmation"
+      title: "Confirmation text after users fill out the contact form displayed when all agents are offline"
+      screenshot: "https://drive.google.com/open?id=1K5GEURjwUDNhyvc9Dj0a_4q3yN_4XhTP"
+      value: "Thanks for the message! We'll get back to you as soon as we can"
+  - translation:
+      key: "embeddable_framework.chat.preChat.offline.button.sendAnother"
+      title: "Button to fill out another contact form after one has been filled when all agents are offline"
+      screenshot: "https://drive.google.com/open?id=1JwCe7SCpWieHWMyw1pPi6SsHQ3YwWqwG"
+      value: "Send Another"
+
+
+
   - translation:
       key: "embeddable_framework.chat.options.yourProfile"
       title: "One of the options that is presented in chat when the user clicks on the ellipses icon. It describes the ability to edit the user's own profile attributes such as name, email and potentially other details."
@@ -408,16 +478,30 @@ parts:
       title: "A title text describing the intent of the following section, it asks if the user would like to rate the prior chat session"
       screenshot: "https://zendesk.box.com/s/v26vtuxkv2uvlr0edh6qxs1aetrttny8"
       value: "Would you like to rate this chat?"
+
   - translation:
       key: "embeddable_framework.chat.postChat.rating.description"
       title: "A text that describes the intent of the following element. It points the user to leave a comment in the textarea"
       screenshot: "https://zendesk.box.com/s/ony1lhy6951mebjnw0ujx2sbo1fokuf9"
       value: "Leave a comment"
+      obsolete: "2017-03-23"
   - translation:
       key: "embeddable_framework.chat.postChat.rating.placeholder.optional"
       title: "A greyed-out text that is displayed in a textarea to signify that entering text into it is optional"
       screenshot: "https://zendesk.box.com/s/iccte733qnja3ez1qhnyj80dhzyanzz5"
       value: "(optional)"
+      obsolete: "2017-03-23"
+  - translation:
+      key: "embeddable_framework.chat.postChat.rating.plainDescription"
+      title: "A text that describes the intent of the following element. It points the user to leave a comment in the textarea"
+      screenshot: "https://drive.google.com/open?id=1dIws7B2s463tG6kDdqlPl2Ff6YD-aDqc"
+      value: "Leave a comment (optional)"
+  - translation:
+      key: "embeddable_framework.chat.chatLog.rating.button.skip"
+      title: "A string for a button to skip a chat rating"
+      screenshot: "https://drive.google.com/open?id=1P1nDpoepZdmGOiobru6wmdJ_9m5t6fIE"
+      value: "Skip"
+
   - translation:
       key: "embeddable_framework.chat.postChat.rating.button.skip"
       title: "A text that is displayed on a button that provides the user with the option to skip the rating form"
